Downgrade para o jdk 8